<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.InventoryFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <LinearLayout
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="只读："
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_singleRead"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="开头的标签"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/sn"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="EPC"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="RSSI"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/count"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvMachineName"
                android:text="Machine Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                tools:ignore="MissingConstraints" />

            <!-- New TextView for Operation -->
            <TextView
                android:id="@+id/tvOperation"
                android:text="Operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginRight="5dp"
                android:text="80张耗时:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:id="@+id/tv_80"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:text="90张耗时:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:id="@+id/tv_90"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:text="100张耗时:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/tv_100"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/tag_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:id="@+id/tvNumber"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:id="@+id/tvCount"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/tvTime"
                android:text="0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="@string/stop_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:gravity="center"
                android:text="10"
                android:inputType="number"
                android:digits="0123456789"
                android:id="@+id/et_stopTime"
                android:layout_width="80dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="20sp"
                android:text="@string/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cb_stopTime"
                android:layout_marginStart="10dp"
                android:text="@string/set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cb_ascii"
                android:layout_marginStart="10dp"

                android:text="ascii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btStartStop"
                android:text="@string/start"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <Button
                android:id="@+id/btnSingle"
                android:text="@string/one"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btClear"
                android:text="@string/clear"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <Button
                android:id="@+id/btExport"
                android:text="@string/export"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
