<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.KillFragment">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etPWDKill"
        app:layout_constraintBottom_toBottomOf="@id/etPWDKill"
        android:id="@+id/tvPWD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    <EditText
        android:hint="00000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvPWD"
        android:id="@+id/etPWDKill"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />
    <CheckBox
        app:layout_constraintLeft_toLeftOf="@id/etPWDKill"
        app:layout_constraintTop_toBottomOf="@id/etPWDKill"
        android:id="@+id/cbSelectKill"
        android:text="@string/check_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Button
        app:layout_constraintTop_toBottomOf="@id/cbSelectKill"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/btnKill"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/destory" />
</androidx.constraintlayout.widget.ConstraintLayout>